:adhesive_bandage: Switch update password from put to patch
